cluster/deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debug-k8s
  template:
    metadata:
      labels:
        app: debug-k8s
    spec:
      containers:
        - name: debug-k8s
          image: setlog/debug-k8s:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /go/src
              name: go-volume
      volumes:
        - name: go-volume
          persistentVolumeClaim:
            claimName: go-pvc
      nodeSelector:
        debug: "true"

---

apiVersion: v1
kind: Service
metadata:
  name: service-debug
spec:
  type: NodePort
  selector:
    app: debug-k8s
  ports:
  - name: debug
    port: 30123
    targetPort: 30123
    nodePort: 30123

---

apiVersion: v1
kind: Service
metadata:
  name: debug-k8s
spec:
  selector:
    app: debug-k8s
  ports:
  - name: endpoint
    port: 8090
    targetPort: 80
